# gitOrigin

./: .gitignore  CMakeLists.txt
src/champion/: champion.cpp  champion.h  champion_rpc.proto  error.h  node.h  physical_node.cpp  physical_node.h  publisher.h  publisher_interface.h  serialization_helper.h  subscriber.h  subscriber_interface.h  thread_pool.h
src/champion_master/: job_queue.cpp  job_queue.h  main.cpp  master.cpp  master.h  message_manager.cpp  message_manager.h  node_manager.cpp  node_manager.h
src/examples/: example_publisher.cpp  example_subscriber.cpp  test_message.proto
tools/: build_posix.sh  build_without_lib_update.bat  release.bat
